# ESsistMe

./: .gitignore  CMakeLists.txt  ESsistMe.kdev4  LICENSE  README.md
Minuit/: AnalyticalGradientCalculator.cpp  BasicMinimumError.cpp  CMakeLists.txt  CombinedMinimumBuilder.cpp  DavidonErrorUpdator.cpp  HessianGradientCalculator.cpp  InitialGradientCalculator.cpp  LaEigenValues.cpp  LaInnerProduct.cpp  LaInverse.cpp  LaOuterProduct.cpp  LaSumOfElements.cpp  LaVtMVSimilarity.cpp  MinuitParameter.cpp  MnApplication.cpp  MnContours.cpp  MnCovarianceSqueeze.cpp  MnEigen.cpp  MnFcn.cpp  MnFunctionCross.cpp  MnGlobalCorrelationCoeff.cpp  MnHesse.cpp  MnLineSearch.cpp  MnMachinePrecision.cpp  MnMinos.cpp  MnParabolaFactory.cpp  MnParameterScan.cpp  MnPlot.cpp  MnPosDef.cpp  MnPrint.cpp  MnScan.cpp  MnSeedGenerator.cpp  MnStrategy.cpp  MnTiny.cpp  MnUserFcn.cpp  MnUserParameterState.cpp  MnUserParameters.cpp  MnUserTransformation.cpp  ModularFunctionMinimizer.cpp  NegativeG2LineSearch.cpp  (+22 more)
Minuit/include/: ABObj.h  ABProd.h  ABSum.h  ABTypes.h  AnalyticalGradientCalculator.h  BasicFunctionGradient.h  BasicFunctionMinimum.h  BasicMinimumError.h  BasicMinimumParameters.h  BasicMinimumSeed.h  BasicMinimumState.h  CombinedMinimizer.h  CombinedMinimumBuilder.h  ContoursError.h  DavidonErrorUpdator.h  FCNBase.h  FCNGradientBase.h  FCNMonitorBase.h  FunctionGradient.h  FunctionMinimizer.h  FunctionMinimum.h  GradientCalculator.h  HessianGradientCalculator.h  InitialGradientCalculator.h  LASymMatrix.h  LAVector.h  LaInverse.h  LaOuterProduct.h  LaProd.h  LaSum.h  MatrixInverse.h  MinimumBuilder.h  MinimumError.h  MinimumErrorUpdator.h  MinimumParameters.h  MinimumSeed.h  MinimumSeedGenerator.h  MinimumState.h  MinosError.h  MinuitParameter.h  (+53 more)
QCustomPlot/: CMakeLists.txt
QtGUI/: CMakeLists.txt  ENavigatorWindow.cpp  EResidualWindow.cpp  ESpectrumWindow.cpp  ESsistMe_MainMenus.cpp  ESsistMe_MainSettings.cpp  ESsistMe_MainWindow.cpp  ESsistMe_mainwindow.cpp  FitDialog.cpp  QStuff.cpp  application.qrc  essistme.qrc  fitdialog.h
QtGUI/images/: Thumbs.db  marker.mng  marker_simple.mng  printlogo.pic  printlogo.png.big
QtGUI/include/: ENavigatorWindow.h  EResidualWindow.h  ESpectrumWindow.h  ESsistMe_mainform.ui  ESsistMe_mainwindow.h  FitDialog.h  QStuff.h  ui_ESsistMe_mainform.h  ui_ESsistMe_mainwindow.h  ui_fitdialog.h
SPeval/: CMakeLists.txt  DataIO.cpp  EComponent1Dim.cpp  EComponentBase.cpp  EPeak1Dim.cpp  EPeak1Gauss.cpp  ESpectrum1Dim.cpp  ESpectrumBase.cpp  ESpectrumProcessor.cpp  SpaceKeeper.cpp  ffatomki.cpp  ffatomki.h
SPeval/include/: DataIO.h  EComponent1Dim.h  EComponentBase.h  EComponentTypes.h  EPeak1Dim.h  EPeak1Gauss.h  ESpectrum1Dim.h  ESpectrumBase.h  ESpectrumProcessor.h  SpaceKeeper.h  ffatomki.h
cmake/: Dependencies.cmake  Docs.cmake  Packages.cmake  Summary.cmake
cmake/Modules/: FindGlog.cmake
doc/: CMakeLists.txt  ESsistMe.bib  Eval-Curve.dox  Eval-Energy.dox  Eval-Intro.dox  Eval-contents.dox  Minimization-Extensions.dox  Minimization-Intro.dox  Minimization-Minuit.dox  Minimization-Usage.dox  Minimization-contents.dox  MinuitLink.dox  Programming-Extensions.dox  Programming-Intro.dox  Programming-Minuit.dox  Programming-Objects.dox  Programming-Visual.dox  Programming-contents.dox  User-Install.dox  User-Intro.dox  User-Windows.dox  User-Working.dox  User-contents.dox  Visualization-CustomPlot.dox  Visualization-Extensions.dox  Visualization-Intro.dox  Visualization-Usage.dox  Visualization-contents.dox  documentation-config.doxygen.in  glossary.dox  release-notes.dox  welcome.dox
main/: CMakeLists.txt  Config.h.in  ESsistMeMain.cpp  Stuff.cpp
main/include/: Stuff.h
test/: CMakeLists.txt  ComponentTest.cpp  EvalTest.cpp  SpectrumTest.cpp  StuffTest.cpp  testESsistMe_Units.cpp
test/Minuit/: CMakeLists.txt  testMinuit.cpp
test/Minuit/MnLink/: DemoLink.cpp  LinkingTest.cpp  LinkingTest.h
test/Minuit/MnSim/: DemoGaussSim.cpp  FlatRandomGen.h  GaussDataGen.cpp  GaussDataGen.h  GaussFcn.cpp  GaussFcn.h  GaussFcn2.cpp  GaussFcn2.h  GaussFunction.h  GaussRandomGen.h  PaulTest.cpp  PaulTest2.cpp  PaulTest3.cpp  PaulTest4.cpp  ReneTest.cpp  paul.txt  paul2.txt  paul3.txt  paul4.txt
test/Minuit/MnTutorial/: Quad12F.h  Quad12FMain.cpp  Quad1F.h  Quad1FMain.cpp  Quad2FMain.cpp  Quad3FMain.cpp  Quad4F.h  Quad4FMain.cpp  Quad8F.h  Quad8FMain.cpp
